Changes in version 1.0-22:
* Greatly improved the speed of impute.R, thanks to Bastien Ferland-Raymond who 
pointed out the problem. 

Changes in version 1.0-21:

* Added code to grmsd() so that it "runs" wiht single variables (ie, just one y from lm).

* Added code to grmsd() so that it "runs" wiht single variables (ie, just one y from lm).
* Added an argument to yai() that allows one to specify a different subset of X-variables
for each Y-variable. 
* Fixed a bug in reporting the results when method="randomForest" and the rfmethod="regression".
* Fixed two long-standing bugs in AsciiGridImpute and AsciiGridPredict. One was
that the output grid headers would not be output correctly when the nodata 
argument was used and the other delt with a problem when predict returned a matrix.
* Modified the examples in AsciiGridImpute so that they use a tempdir() for output files.
* Added the use of grmsd() in the examples in yai().
* Fixed return value in grmsd() when argument rtnVectors is TRUE

Changes in version 1.0-20:

* Added varSelection() to aid in variable selection. A plot function is 
include to aid in understanding the results; bestVars() returns what seem to be
a set of "best" variables for objects created by varSelection().
* Added grmsd() to compute a generalized root mean square error which is a Mahalanobis
distance between observed and imputed. Provides a single score useful for ranking
imputation models and methods (or returns vectors of distances).
* Added rmsd(); it is an alias to rmsd.yai().
* Added method="median" to function impute.
* Added method="msnPP" to function yai to enable using canonical correlation via 
projection pursuit from package ccaPP
* Added ensembleImpute() to get an mean or median imputation for several
separate imputations. Computes the mode for factors.
* Added John Coulston as an author on some of the new functions and the package.
* Added bootstrap= option to yai() so that reference observations can 